#------------------------------------------------------------------
# configure.in for the KVIrc IRC client
# Szymon Stefanek (07-04-2000)
#------------------------------------------------------------------

AC_INIT(README)

AC_SS_HEADER([Trying to find out where I am])

AC_CONFIG_AUX_DIR(admin)

AC_CANONICAL_SYSTEM

AC_SS_HEADER([Initializing automake])

AC_PREREQ(2.52)

AM_INIT_AUTOMAKE(kvirc,3.9.0)

AC_PREFIX_DEFAULT(/usr/local)
AM_CONFIG_HEADER(src/config.h)

#------------------------------------------------------------------
# HERE starts your real configure script
#------------------------------------------------------------------

AC_SS_INIT_VARIABLES

AC_SS_HEADER([Checking the compilation mode])

AC_SS_CXXFLAGS

AC_SS_HEADER([Checking the C++ environment])

AC_PROG_CC
AC_AIX
AC_MINIX
AC_EXEEXT
AC_LANG_CPLUSPLUS
AC_PROG_CXX

AC_SS_HEADER([Initializing libtool])

AM_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
KVIRC_PROG_LIBTOOL

AC_SS_HEADER([Checking system properties])

AC_SS_HEADER_CHECKS
AC_SS_FUNCTION_CHECKS

AC_SS_CHECK_IFADDR_STUFF
AC_SS_CHECK_DYNAMIC_LABELS
AC_SS_CHECK_BIG_ENDIAN
AC_SS_MISC_OPTIONS

AC_CHECK_SIZEOF(short int)
AC_CHECK_SIZEOF(unsigned short int)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(long int)
AC_CHECK_SIZEOF(unsigned long int)
AC_CHECK_SIZEOF(long long int)
AC_CHECK_SIZEOF(unsigned long long int)
AC_CHECK_SIZEOF(void *)

#AC_SS_CHECK_KVISOCKLEN_T
#AC_SS_CHECK_BOOL
#AC_SS_LIBRARY_CHECKS
#AC_SS_FIND_JPEG

AC_SS_HEADER([Looking for required libraries])

AC_SS_CHECK_DL
AC_SS_CHECK_THREAD_STUFF

AC_SS_HEADER([Looking for X])

AC_SS_FIND_X
AC_SS_CHECK_XSS
AC_SS_HEADER([Looking for Qt])

SS_QT_MAJOR_VERSION_REQUIRED="4"
SS_QT_MINOR_VERSION_REQUIRED="2"
SS_QT_PATCH_LEVEL_REQUIRED="0"
SS_QT_GENERAL_FILE_TO_SEARCH="include/QtCore/QtPlugin"
SS_QT_INCLUDE_FILE_TO_SEARCH="QtCore/QtPlugin"

AC_SS_FIND_QT

AC_SS_HEADER([Checking KDE])

SS_KDE_GENERAL_FILE_TO_SEARCH="include/kwin.h"
SS_KDE_INCLUDE_FILE_TO_SEARCH="kwin.h"

AC_SS_FIND_KDE

AC_SS_HEADER([Checking additional compilation options])
AC_SS_CHECK_OPENSSL
AC_SS_CHECK_ESD
AC_SS_CHECK_ARTS
AC_SS_CHECK_ZLIB
AC_SS_CHECK_AUDIOFILE
AC_SS_CHECK_OTHER_LIBS
AC_SS_CHECK_PERL
AC_SS_HEADER([Working out the final configuration])

AC_SS_FINAL_CONFIG

AC_SS_HEADER([Creating Makefiles])

AC_OUTPUT( \
	Makefile \
	admin/Makefile \
	admin/libtool/Makefile \
	data/Makefile \
	data/applnk/Makefile \
	data/config/Makefile \
	data/defscript/Makefile \
	data/deftheme/Makefile \
	data/deftheme/silverirc/Makefile \
	data/doctemplates/Makefile \
	data/helppics/Makefile \
	data/icons/Makefile \
	data/icons/16x16/Makefile \
	data/icons/32x32/Makefile \
	data/icons/48x48/Makefile \
	data/icons/64x64/Makefile \
	data/icons/128x128/Makefile \
	data/icons/scalable/Makefile \
	data/man/Makefile \
	data/mimelnk/Makefile \
	data/msgcolors/Makefile \
	data/pics/Makefile \
	data/pics/coresmall/Makefile \
	data/protocols/Makefile \
	data/resources/Makefile \
	data/resources_mac/Makefile \
	doc/Makefile \
	doc/scriptexamples/Makefile \
	doc/scriptexamples/antiidle/Makefile \
	doc/scriptexamples/minesweeper/Makefile \
	doc/scriptexamples/mp3share/Makefile \
	doc/scriptexamples/playing/Makefile \
	doc/scriptexamples/runmenu/Makefile \
	doc/scriptexamples/simplehttp/Makefile \
	doc/scriptexamples/tutorial/Makefile \
	po/Makefile \
	po/kvirc/Makefile \
	po/modules/Makefile \
	po/modules/about/Makefile \
	po/modules/dcc/Makefile \
	po/modules/editor/Makefile \
	po/modules/filetransferwindow/Makefile \
	po/modules/logview/Makefile \
	po/modules/mediaplayer/Makefile \
	po/modules/notifier/Makefile \
	po/modules/options/Makefile \
	po/modules/perl/Makefile \
	po/modules/perlcore/Makefile \
	po/modules/sharedfileswindow/Makefile \
	po/modules/torrent/Makefile \
	po/modules/theme/Makefile \
	scripts/Makefile \
	scripts/browser/Makefile \
	scripts/config/Makefile \
	scripts/config/kvirc4-config \
	scripts/helpsearch/Makefile \
	src/Makefile \
	src/kvilib/Makefile \
	src/kvilib/build/Makefile \
	src/kvilib/config/Makefile \
	src/kvilib/core/Makefile \
	src/kvilib/ext/Makefile \
	src/kvilib/file/Makefile \
	src/kvilib/include/Makefile \
	src/kvilib/irc/Makefile \
	src/kvilib/net/Makefile \
	src/kvilib/system/Makefile \
	src/kvilib/tal/Makefile \
	src/kvirc/Makefile \
	src/kvirc/build/Makefile \
	src/kvirc/include/Makefile \
	src/kvirc/kernel/Makefile \
	src/kvirc/kvs/Makefile \
	src/kvirc/module/Makefile \
	src/kvirc/sparser/Makefile \
	src/kvirc/ui/Makefile \
	src/modules/Makefile \
	src/modules/about/Makefile \
	src/modules/action/Makefile \
	src/modules/actioneditor/Makefile \
	src/modules/addon/Makefile \
	src/modules/addon/pics/Makefile \
	src/modules/aliaseditor/Makefile \
	src/modules/avatar/Makefile \
	src/modules/chan/Makefile \
	src/modules/channelsjoin/Makefile \
	src/modules/clock/Makefile \
	src/modules/codetester/Makefile \
	src/modules/config/Makefile \
	src/modules/context/Makefile \
	src/modules/dialog/Makefile \
	src/modules/dcc/Makefile \
	src/modules/dockwidget/Makefile \
	src/modules/editor/Makefile \
	src/modules/eventeditor/Makefile \
	src/modules/file/Makefile \
	src/modules/filetransferwindow/Makefile \
	src/modules/filetransferwindow/caps/Makefile \
	src/modules/help/Makefile \
	src/modules/http/Makefile \
	src/modules/ident/Makefile \
	src/modules/iograph/Makefile \
	src/modules/lamerizer/Makefile \
	src/modules/links/Makefile \
	src/modules/list/Makefile \
	src/modules/log/Makefile \
	src/modules/logview/Makefile \
	src/modules/logview/caps/Makefile \
	src/modules/mask/Makefile \
	src/modules/math/Makefile \
	src/modules/mediaplayer/Makefile \
	src/modules/mircimport/Makefile \
	src/modules/mircimport/caps/Makefile \
	src/modules/mircimport/pics/Makefile \
	src/modules/my/Makefile \
	src/modules/notifier/Makefile \
	src/modules/notifier/pics/Makefile \
	src/modules/objects/Makefile \
	src/modules/options/Makefile \
	src/modules/perl/Makefile \
	src/modules/perlcore/Makefile \
	src/modules/popupeditor/Makefile \
	src/modules/raweditor/Makefile \
	src/modules/regchan/Makefile \
	src/modules/reguser/Makefile \
	src/modules/rijndael/Makefile \
	src/modules/rijndael/caps/Makefile \
	src/modules/setup/Makefile \
	src/modules/sharedfile/Makefile \
	src/modules/sharedfileswindow/Makefile \
	src/modules/sharedfileswindow/caps/Makefile \
	src/modules/snd/Makefile \
	src/modules/socketspy/Makefile \
	src/modules/spaste/Makefile \
	src/modules/str/Makefile \
	src/modules/system/Makefile \
	src/modules/term/Makefile \
	src/modules/texticons/Makefile \
	src/modules/theme/Makefile \
	src/modules/tip/Makefile \
	src/modules/tmphighlight/Makefile \
	src/modules/toolbar/Makefile \
	src/modules/toolbareditor/Makefile \
	src/modules/torrent/Makefile \
	src/modules/url/Makefile \
	src/modules/url/caps/Makefile \
	src/modules/window/Makefile \
)
