###############################################################################
# KVirc IRC client Makefile - 16.12.98 Szymon Stefanek <stefanek@tin.it>
###############################################################################

SUBDIRS          = kvilib kvirc modules

headers_HEADERS=kvi_configstatus.h

kvi_configstatus.h: config.h
	cp -f config.h kvi_configstatus.h
