###############################################################################
# KVirc IRC client Makefile - 16.12.98 Szymon Stefanek <stefanek@tin.it>
###############################################################################

SUBDIRS          = applnk config defscript deftheme doctemplates \
helppics icons man mimelnk msgcolors pics protocols resources resources_mac
