###############################################################################
# KVirc IRC client Makefile - 16.12.98 Szymon Stefanek <stefanek@tin.it>
###############################################################################

SUBDIRS          = scriptexamples

EXTRA_DIST       = COPYING *.txt


tmpdir = $(licensedir)
tmp_DATA = COPYING
