###############################################################################
# KVirc IRC client Makefile - 16.12.98 Szymon Stefanek <stefanek@tin.it>
###############################################################################

SUBDIRS = kvisounds mp3share playing tutorial

EXTRA_DIST = *.kvs
